tests/dataset/tpc-ds/compiler/java/q45.error
javac error: exit status 1
/tmp/TestJavaCompiler_TPCDSQueriesq45623386380/001/Q45.java:203: error: cannot find symbol
                        if (!((zip_list.contains(substr(ca.ca_zip, 0, 5)) || item_ids.contains(i.i_item_id)) && d.d_qoy == qoy && d.d_year == year)) continue;
                                                 ^
  symbol: method substr(String,int,int)
1 error
